--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
 
 
   <title>Shri Shyam Air Tickets</title>
-
-    <link rel="canonical" href="https://codepen.io/Morched23MJ/pen/YjbOgw">
-  
-  
   
   
 <style>
@@ -701,7 +697,9 @@ footer ul li {
       <p>copyright © 2023  @ShrI Shyam Air Tickets</p>
     </div>
     <div class="social-media">
-      <p>find us on social medias</p>
+      <p>find us on social medias
+      <br>
+      @avadesh.tech</p>
     <ul>
           <li><a href="https://www.instagram.com/shyam.airticket/" target="_blank"><i class="fab 5x fa-instagram"></i></a></li>
           <li><a href="https://www.facebook.com" target="_blank"><i class="fab 5x fa-facebook-f"></i></a></li>
