--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@ footer ul li {
     <div class="social-media">
       <p>find us on social medias
       <br>
-      @avadesh.tech</p>
+      <a href="https://avadesh.tech/">@avadesh.tech</a></p>
     <ul>
           <li><a href="https://www.instagram.com/shyam.airticket/" target="_blank"><i class="fab 5x fa-instagram"></i></a></li>
           <li><a href="https://www.facebook.com" target="_blank"><i class="fab 5x fa-facebook-f"></i></a></li>
